2003-06-29  Musachy Barroso  <insanus@bellsouth.net>

	* src/decl.cpp:
	* src/error.cpp:
	* src/symbol.cpp:
	* src/symbol.h: When a duplicate method or constructor
	is found, add information(location) about the original
	method or constructor declaration to the error message

2003-05-31  Eric Blake  <ebb9@email.byu.edu>

	* src/case.h:
	* src/getclass.cpp: Fix comparisons between wchar_t and int to
	avoid warnings.

2003-05-15  Chris Abbey  <jikes@cabbey.net>

	* Makefile.in: add HACKING file to dist list	

2003-04-18  Eric Blake  <ebb9@email.byu.edu>

	* src/case.h:
	* src/java.g: Fix typos.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h: Regenerate, and with updated version of jikespg.

2003-04-10  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h:
	* src/error.h: Fix implicit destructor warning in gcc 3.3+.
	* src/case.h: Fix array reference warning in gcc 3.3+.
	* src/getclass.h: Fix empty class warning in gcc 3.3+.
	* src/set.h: Workaround for gcc PR c++/10347. 

2003-03-28  Eric Blake  <ebb9@email.byu.edu>

	* Makefile.am: Allow maintainer mode to detect changes in src/m4.
	* configure.in: Check for touch, for maintainer mode.
	* src/Makefile.am: Fix maintainer mode dependence.
	* src/symbol.cpp:
	* src/system.cpp: Remove compiler warning.
	* src/m4/ac_check_wcs_funcs.m4: Fix to work with -Werror.
	* Makefile.in:
	* configure:
	* doc/Makefile.in:
	* src/Makefile.in: Regenerate.

2003-03-24  Eric Blake  <ebb9@email.byu.edu>

	* configure.in: Update to automake 1.7.3.
	* src/m4/ac_cxx_check_set_new_handler.m4: Fix typo.
	* Makefile.in:
	* aclocal.m4:
	* config.guess:
	* config.sub:
	* configure:
	* depcomp:
	* doc/Makefile.in:
	* src/Makefile.in:
	* src/config.h.in: Regenerate.

2003-03-02  Elliott Hughes  <enh@acm.org>

	* src/diagnose.cpp:
	* src/stream.cpp: (emacsErrorString, regularErrorString):
	improve consistency between the emacs and regular error